--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minima
+name: GitHub User
 title: beegis testseite
-description: Bookmark this to keep an eye on my project updates
+description: versuche ein theme einzubinden
