--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+theme: MINIMA
 name: GitHub User
-title: beegis testseite
-description: versuche ein theme einzubinden
+title: eine weitere Website
+description: Test, Test, ... 
